--- a/usr/share/bodhibuilder-gtk/bodhibuilder-gtk.glade
+++ b/usr/share/bodhibuilder-gtk/bodhibuilder-gtk.glade
@@ -283,6 +283,39 @@
                   </packing>
                 </child>
                 <child>
+                  <widget class="GtkButton" id="button12">
+                    <property name="label" translatable="yes">Select</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="use_action_appearance">False</property>
+                    <signal name="clicked" handler="on_button12_clicked" swapped="no"/>
+                  </widget>
+                  <packing>
+                    <property name="top_attach">8</property>
+                    <property name="bottom_attach">9</property>
+                    <property name="x_options">GTK_FILL</property>
+                    <property name="y_options"/>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="label19">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="xalign">0</property>
+                    <property name="label" translatable="yes">Plymouth theme</property>
+                    <property name="width_chars">60</property>
+                  </widget>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="right_attach">3</property>
+                    <property name="top_attach">8</property>
+                    <property name="bottom_attach">9</property>
+                    <property name="y_options">GTK_FILL</property>
+                  </packing>
+                </child>
+<!--
+                <child>
                   <widget class="GtkButton" id="button11">
                     <property name="label" translatable="yes">Select</property>
                     <property name="visible">True</property>
@@ -292,8 +325,8 @@
                     <signal name="clicked" handler="on_button11_clicked" swapped="no"/>
                   </widget>
                   <packing>
-                    <property name="top_attach">8</property>
-                    <property name="bottom_attach">9</property>
+                    <property name="top_attach">9</property>
+                    <property name="bottom_attach">10</property>
                     <property name="x_options">GTK_FILL</property>
                     <property name="y_options"/>
                   </packing>
@@ -341,43 +374,12 @@
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="right_attach">3</property>
-                    <property name="top_attach">8</property>
-                    <property name="bottom_attach">9</property>
-                    <property name="y_options">GTK_FILL</property>
-                  </packing>
-                </child>
-                <child>
-                  <widget class="GtkButton" id="button12">
-                    <property name="label" translatable="yes">Select</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="use_action_appearance">False</property>
-                    <signal name="clicked" handler="on_button12_clicked" swapped="no"/>
-                  </widget>
-                  <packing>
-                    <property name="top_attach">9</property>
-                    <property name="bottom_attach">10</property>
-                    <property name="x_options">GTK_FILL</property>
-                    <property name="y_options"/>
-                  </packing>
-                </child>
-                <child>
-                  <widget class="GtkLabel" id="label19">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Plymouth theme</property>
-                    <property name="width_chars">60</property>
-                  </widget>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="right_attach">3</property>
                     <property name="top_attach">9</property>
                     <property name="bottom_attach">10</property>
                     <property name="y_options">GTK_FILL</property>
                   </packing>
                 </child>
+-->
               </widget>
             </child>
             <child>
@@ -415,7 +417,12 @@
                   <widget class="GtkEntry" id="entry1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="tooltip" translatable="yes">Here you can change the livecd/dvd username.</property>
+                    <property name="tooltip" translatable="yes">Here you can change the livecd/dvd username.
+  In a 'dist' spin, this will be both the username and password.
+  In a 'backup' spin AND if lightdm autologin is enabled:
+  this will be the first attempted username for autlogin, if
+  this username is not found the currently logged-in username
+  will be used for autologin.</property>
                     <property name="invisible_char">●</property>
                     <property name="primary_icon_activatable">False</property>
                     <property name="secondary_icon_activatable">False</property>
